--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>ShoeCart</title>
@@ -15,19 +14,19 @@
 
 <body>
     <main class="container">
-        <div class="container-box">
+        <div class="card card-sport">
             <h4>Keep it Sporty</h4>
             <p>Shoes to keep you active and healthy</p>
             <a href="">View Collection</a>
         </div>
-        <div class="container-box">
-            <h4>keep it Casual</h4>
+        <div class="card card-casual">
+            <h4>Keep it Casual</h4>
             <p>Shoes to keep you confortable</p>
             <a href="">View Collection</a>
         </div>
-        <div class="container-box">
+        <div class="card card-formal">
             <h4>Keep if Formal</h4>
-            <p>Soes to keep you looking sharp</p>
+            <p>So to keep you looking sharp</p>
             <a href="">View Collection</a>
         </div>
     </main>
